# PLEX

./: .gitignore  README.md  pyproject.toml
src/plex/: __init__.py  __main__.py  automata.py  dfa.py  lex.py  nfa.py  regex.py  wrapper.py
